# utilsExample

./: .gitignore  .gitmodules  Drawgraph.py  diffData.py  myutils.py  process.py
Bestpractices/drawHistogramPy/: dataTest.py  errlog
Bestpractices/package/: setup.py
Bestpractices/pybindCmake/: CMakeLists.txt
Bestpractices/pybindCmake/pyCode/: pyAdd.py
Bestpractices/pybindCmake/src/: cAdd.cpp
buildsh/: oneDal1.sh
buildsh/oneDal/: oneDal1.sh  oneDalCompileGNU.yml  samplesBuildsh.sh
drawHistogramPy/: dataTest.py
localConfig/others/: gitconfig  tmux.conf  zshrc
localConfig/vim/: vimrc
localConfig/zshrc/: tmuxSession.sh  zshrc
pybindCmake/: main.cpp  main.py
pybindCmake/bindsrc/: bind.cpp
pybindCmake/src/: cAdd.h
pybindCmake/test/: test.py
utils/: Drawgraph.py  diffData.py  drawgraph3d.py  findMax.py  gridInterpolator.py  process.py
utils/caculator/algo/: kmeans.csv
utils/caculator/src/: parser.py
utils/dataprocess/: libsvm2csv.py  process.py  timeInfo.py
utils/timer/: testFile  timer.py
utils/timer/test1/: testFile1time_breakdown
utils/timer/test2/: testFile1time_breakdown
